[PARTE-2] adicionando styled components iniciais

--- a/simulador-so-web/public/index.html
+++ b/simulador-so-web/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -9,7 +9,15 @@
       name="description"
       content="Simulador web de Sistema Operacional"
     />
-    <title>Simulador SO</title>
+    <!-- fontes -->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,200;0,300;0,500;1,100;1,300;1,500&family=Montserrat:ital,wght@0,200;0,400;0,500;1,200;1,300;1,500&display=swap"
+    rel="stylesheet">
+  
+  <title>Simulador SO</title>
   </head>
   <body>
     <div id="root"></div>
